--- a/Front/main.css
+++ b/Front/main.css
@@ -135,8 +135,21 @@ a.mdl-navigation__link:hover{
   
 }
 
-.container{
-    min-height: 100%;
-   width: 100%;
-   height: 100%; /* NEW */
+#danger_alert, #success_alert{
+  position: fixed;
+  left: 50%;
+  width: 25%;
+  z-index: 100;
+  transition: opacity 500ms;
+  visibility: hidden;
+  opacity: 0;
+}
+
+/* #danger_alert:target {
+  visibility: visible;
+  opacity: 1;
+} */
+
+#success_alert{
+
 }
