--- a/Front/main.css
+++ b/Front/main.css
@@ -123,16 +123,12 @@ a.mdl-navigation__link:hover{
   padding: 20px 100px 20px 100px;
 }
 
-.score_form_buttons{
+.score_form_buttons, .add_score_form_buttons{
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 15px;
-}
-
-#score_form{
-  
 }
 
 #danger_alert, #success_alert{
@@ -143,13 +139,4 @@ a.mdl-navigation__link:hover{
   transition: opacity 500ms;
   visibility: hidden;
   opacity: 0;
-}
-
-/* #danger_alert:target {
-  visibility: visible;
-  opacity: 1;
-} */
-
-#success_alert{
-
 }
