--- a/Front/main.css
+++ b/Front/main.css
@@ -140,3 +140,65 @@ a.mdl-navigation__link:hover{
   visibility: hidden;
   opacity: 0;
 }
+
+#settings-layout{
+  background: -webkit-linear-gradient(left, #25c481, #25b7c4);
+  background: linear-gradient(to right, #25c481, #25b7c4);
+}
+
+
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,500,300,700);
+table{
+  width:100%;
+  padding: 50px;
+  /* table-layout: fixed; */
+}
+.tbl-header{
+  background-color: rgba(255,255,255,0.3);
+ }
+.tbl-content{
+  max-height:300px;
+  /* height: 500px; */
+  overflow-x:auto;
+  margin-top: 0px;
+  border: 1px solid rgba(255,255,255,0.3);
+}
+th{
+  padding: 20px 15px;
+  /* text-align: left; */
+  font-weight: 500;
+  font-size: 30px;
+  color: #fff;
+  /* text-transform: uppercase; */
+}
+td{
+  padding: 15px;
+  text-align: left;
+  vertical-align:middle;
+  font-weight: 300;
+  font-size: 20px;
+  color: #fff;
+  border: solid 1px rgba(255,255,255,0.1);
+}
+
+section{
+  margin: 50px;
+}
+
+/* for custom scrollbar for webkit browser*/
+
+::-webkit-scrollbar {
+  width: 6px;
+} 
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+} 
+::-webkit-scrollbar-thumb {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+}
+
+td .close{
+  float: left;
+  justify-self: center;
+  background-color: red;
+}
